# America-250-Game-Live

./: .cursorrules  .gitignore  .pre-commit-config.yaml  GIT_GUIDELINES.md  SADTALKER_MIGRATION.md  SECURITY.md  pyproject.toml
engine/: project.godot
engine/scripts/: CameraController.gd  Province.gd  ProvinceInputHandler.gd  ProvinceManager.gd  SimulationManager.gd
protocol/schemas/: concession.yaml  content_safety.yaml  counter_offer.yaml  error.yaml  negotiation_report.yaml  proposal.yaml  small_talk.yaml  speaker_turn.yaml  ultimatum.yaml  world_context.yaml
services/negotiation/: .env.example  .gitignore  Dockerfile  HARNESS_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Makefile  PROVIDER_PIPELINE.md  README.md  SADTALKER_SETUP.md  app.py  config.py  demo_veo3_provider.py  diplomatic_avatar.py  docker-compose.yml  enhanced_harness.py  env.example  main.py  pyproject.toml  requirements-providers.txt  simple_test_harness.py  standalone_harness.py  test_diplomatic_avatar.py  test_enhanced_integration.py  test_harness.py  wav2lip_generator.py
services/negotiation/app/: main.py
services/negotiation/core/: __init__.py  content_safety.py  logging_config.py  session_manager.py  settings.py  webrtc_manager.py  yaml_middleware.py  yaml_utils.py
services/negotiation/examples/: gemini_live_test.py  gemini_setup.md
services/negotiation/listeners/: __init__.py  base.py  gemini_realtime.py  grok_realtime.py  local_stt.py  openai_realtime.py  real_llm.py
services/negotiation/providers/: README.md  __init__.py  _backpressure.py  _safety.py  _scoring.py  base.py  claude_provider.py  gemini_provider.py  gemini_veo3.py  grok_provider.py  mock_local.py  openai_provider.py  types.py
services/negotiation/providers/video_sources/: __init__.py  base.py  placeholder_loop.py  sadtalker_source.py  veo3_stream.py
services/negotiation/schemas/: __init__.py  generate_models.py  models.py  validators.py
services/negotiation/scripts/: launch.sh  setup_env.sh  start.bat  start.sh  start_clean.sh
services/negotiation/stt/: __init__.py  base.py  faster_whisper.py
services/negotiation/tests/: conftest.py  test_content_safety.py  test_end_to_end.py  test_harness.py  test_integration.py  test_llm_integration.py  test_main.py  test_provider_edge_cases.py  test_providers.py  test_runner.py  test_session_manager.py  test_tts.py  test_tts_integration.py  test_webrtc_audio.py  test_webrtc_browser.py
services/negotiation/tests/providers/: test_gemini_veo3_stub.py  test_mock_local.py  test_veo3_provider.py  test_video_sources.py
services/negotiation/tools/: real_video_generator.py
services/negotiation/tts/: __init__.py  base.py  elevenlabs.py  xtts.py
services/negotiation/video_providers/: __init__.py  did_video.py
services/negotiation/web/: enhanced_test_client.html  gemini-realtime-component.html  sadtalker-avatar-component.html  teller-avatar-component.html  test_client.html
services/negotiation/webrtc/: __init__.py  publish.py
